--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One|Uncial+Antiqua" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Word Puzzle</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="jumbotron">Word Puzzle</h1>
+      <h1>Word Puzzle</h1>
       <div id="blanks">
         <form>
           <div class="form-group">
@@ -20,7 +21,8 @@
         </form>
       </div>
       <div id="output">
-        <h1>PUZZLED SENTENCE BELOW</h1>
+        <h1 id="title">PUZZLED SENTENCE BELOW:</h1>
+        <h1 id="puzzled-title">P-ZZL-D S-NT-NC- B-L-W:</h1>
         <h2><span id="puzzled-sentence"></span></h2>
       </div>
     </div>
